# Copyright 2020 IOTA Stiftung
# SPDX-License-Identifier: Apache-2.0

[workspace]
members = [
    "atomicswapcoloredtokens",
    "atomicswaperc20async",
    "atomicswaperc20sync",
    "dividend",
    "donatewithfeedback",
    "erc20",
    "fairauction",
    "fairroulette",
    "helloworld",
    "inccounter",
    "testcore",
    "tokenregistry",
]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
